config("cxx_std") {
  cflags_cc = [
    "-std=c++2a",
    "-Wpedantic",
    "-g"
  ]
}

group("example-set") {
  deps = [
    "//src/hello_world",
  ]
}

group("arrays-strings") {
  deps = [
    "//src/arrays_strings:merging_meeting_times",
    "//src/arrays_strings:string_reverse",
    "//src/arrays_strings:words_reverse",
    "//src/arrays_strings:merge_sorted_arrays"
  ]
}
