executable("merging_meeting_times") {
  sources = [
    "merging_meeting_times.cpp",
  ]
  include_dirs = [
    "//src/include"
  ]
  configs += [
    "//:cxx_std"
  ]
}

executable("string_reverse") {
  sources = [
    "string_reverse.cpp",
  ]
  include_dirs = [
    "//src/include"
  ]
  configs += [
    "//:cxx_std"
  ]
}

executable("words_reverse") {
  sources = [
    "words_reverse.cpp",
  ]
  include_dirs = [
    "//src/include"
  ]
  configs += [
    "//:cxx_std"
  ]
}
